Improved PKGBUILD. Added source tarball.

--- a/omodoro/PKGBUILD
+++ b/omodoro/PKGBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Oliver Kraitschy <okraits at arcor dot de>
 
-pkgname=omodoro
-pkgver=51b537b
+pkgname=omodoro-git
+pkgver=r10.51b537b
 pkgrel=1
 pkgdesc='Simple commandline tool to use the pomodoro technique'
 arch=('any')
 url='https://github.com/okraits/omodoro'
 license=('GPL')
-depends=('python3' 'libnotify')
+depends=('python' 'libnotify')
 makedepends=('git')
 source=('git://github.com/okraits/omodoro.git')
 sha1sums=('SKIP')
@@ -16,14 +16,14 @@ _gitname='omodoro'
 
 pkgver() {
   cd "$_gitname"
-  git rev-list -n 1 master | git rev-parse --short master
+  printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
 }
 
 package() {
   cd "$_gitname"
 
-  install -Dm755 omodoro  ${pkgdir}/usr/bin/omodoro
-  install -Dm644 README.md  ${pkgdir}/usr/share/doc/${pkgname}/README
+  install -Dm755 omodoro  "${pkgdir}/usr/bin/omodoro"
+  install -Dm644 README.md  "${pkgdir}/usr/share/doc/${pkgname}/README"
 }
 
 # vim:set ts=2 sw=2 et:
